# blandat

./: DirectXanteckningar  README.md  bytealigna.js  chord-progressions  handdisk.md  handdisk.txt  node_meta.py
Anteckningar/: CFD.md  LagrangeMultipliers.txt
Anteckningar/DifferentialGeometry/: AffineConnection.tex  DifferentialGeometry.tex  bibliography.bib  efesketch.py
Anteckningar/musik/: intervals.ly
Anteckningar/musik/violin/: dynamic_level.ipynb
align-pdf/: .mustache  README.md  pyproject.toml
align-pdf/align_pdf/: cli.py
align-pdf/align_pdf/convert/: cli.py
align-pdf/align_pdf/sheet/: cli.py  fft_align.py  line_align.py  utils.py
align-pdf/tests/: test_align_pdf.py
blender/: game_rig_export.py
chrome_extensions/GoogleLinkText/: background.html  background_script.js  content_script.js  manifest.json
chrome_extensions/GoogleLinkText/js/: background_script.js  content_script.js
factor/: README.txt
factor/mathematics/derivatives/: derivatives-tests.factor  derivatives.factor
gitarr-manuell/: index.html
gitarr-manuell/css/: gitarr.css
gitarr-manuell/js/: gitarr.js
physics/: pyproject.toml
physics/physics/: verlet_integration.py
physics/tests/: test_physics.py
unity/: AutomaticColliderFitting.cs
videopick-form/: app.css  app.js  index.html
