[tool.poetry]
name = "align-pdf"
version = "0.1.0"
description = ""
authors = ["emilberwald"]

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.15.1"
click = "^8.0.1"
opencv-python = "^4.5.2"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
mypy = "^0.902"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
